[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "PyLibreNMS"
version = "0.0.1"
authors = [
  { name="Diego Troy Lopez", email="diego.lopez@nyu.edu" },
]
description = "A Python Library for LibreNMS"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
keywords = ["librenms", "librenms", "networking"]
dependencies = [
    "requests"
]

[project.urls]
Homepage = "https://github.com/diego-lopez8/pylibrenms"
Issues = "https://github.com/diego-lopez8/pylibrenms/issues"